# marathon.pkg.extractor

./: .flake8  .gitignore  LICENSE  README.md  _venv.bat  conftest.py  convert.bat  download.bat  extract.bat  help.bat  pyproject.toml  requirements.txt  run.bat
.github/workflows/: ci.yaml
src/: __init__.py  main.py  package.py
src/cli/: main.py
src/core/: __init__.py  analyze.py  constants.py  converter.py  cryptographer.py  formats.py  package.py  signatures.py
src/utils/: __init__.py  check_audio.py  downloader.py  filesystem.py  logger.py  oodle.py
tests/: __init__.py  conftest.py
tests/unit/: test_converter.py  test_downloader.py  test_oodle.py  test_package.py  test_signatures.py
