[project]
name = "marathon-pkg-extractor"
version = "0.3.0"
description = "Tiger Engine .pkg tool for Marathon 2026"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pycryptodome>=3.20.0",
    "requests>=2.34.2",
    "click>=8.1.7",
    "tqdm>=4.68.4",
    "rich>=13.9.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
marathon-extractor = "src.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
